# FinalYearProject

./: CAmera-Module.py  EmotionDetection.py  New Text Document.txt  README.md  requirements.txt
Backend modules/Communication module/: README.md  context_filter.py  requirements.txt  voice_analysis.py
Backend modules/Complete backend/: README.md  asymmetry_module.py  deception_pipeline.py  emotion_detection_module.py  example_env  eye_gaze_module.py  forensic_voice_analyzer.py  fusion_engine.py  hand_face_touch_module.py  head_pose_module.py  lip_jaw_module.py  main.py  nlp_deception_module.py  reasoning_engine.py  requirements.txt  (+3 more)
Frontend/: .gitignore  README.md  RUN.bat  main.py  main.spec  pyproject.toml  requirements.txt  web_app.py
Frontend/modules/: database.py
Frontend/web/: index.html
Frontend/web/js/common/: api.js  auth.js  constants.js  media-recorder.js  utils.js
Frontend/web/js/components/: loader.js  media-preview.js  sidebar.js  vault-component.js
Frontend/web/js/pages/: dashboard.js  facial-expression.js  login.js  profile.js  settings.js  signup.js  start-session.js  uploads.js  voice-analysis.js
Frontend/web/pages/: dashboard.html  facial-expression.html  login.html  profile.html  report-detail.html  reports.html  settings.html  signup.html  start-session.html  uploads.html  voice-analysis.html
Frontend/web/styles/: output.css  sidebar.css
pages/: dashboard.html  facial-expression.html  live-session.html  login.html  profile.html  report-detail.html  reports.html  settings.html  signup.html  uploads.html  voice-analysis.html
(+13 files in other folders)
