[project]
name = "deceptron-fyp-final-year-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eel>=0.18.2",
    "hsemotion>=0.3.0",
    "mediapipe==0.10.9",
    "numpy==1.26.4",
    "opencv-python==4.8.1.78",
    "pyaudio>=0.2.14",
    "pyinstaller>=6.0.0",
    "timm==0.9.2",
    "tinydb>=4.8.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
